dataset1235/2025-2/805158916/users/2004009724/executions/2651470117_2383239197.log
== SUBMISSION (2025-08-25 14:55:50)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:08)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:36)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad)))
print(round(c, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:05)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:56:07)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:06)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:55:53)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:54:40)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 )) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
7509.82
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
125.93
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
-40.73
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
0.44
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
-6.86
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
28.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:56:08)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + (b ** 2) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:55:52)
-- CODE: 
import math 
a = float(input())
b = float(input())
gramma_graus = float(input())
gramma_rad = math.radians (gramma_graus)
c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
print(round(c, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    c = math.sqrt(( a ** 2 ) + ((b ** 2)) - (2 * a * b * math.cos ( gramma_rad))
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
